Destructor error +i/o system +optimization -optimization(bcs of map)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,6 @@
         "streambuf": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
-        
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
@@ -41,6 +40,7 @@
         "xutility": "cpp",
         "cctype": "cpp",
         "sstream": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "fstream": "cpp"
     }
 }
